--- a/src/pages/My/index.module.less
+++ b/src/pages/My/index.module.less
@@ -1,20 +1,23 @@
 @list: ~'at-list';
 
 .container {
-  :global {
-    .@{list}__item-container {
-      height: 100px;
-
-      .userInfo {
-        background: linear-gradient(to bottom,blue, pink);
-      }
-
-      .@{list}__item-thumb {
-        width: 100px;
+  .userInfo {
+    :global {
+      .@{list}__item-container {
         height: 100px;
-        border-radius: 15px;
-        overflow: hidden;
+  
+        .@{list}__item-thumb {
+          width: 100px;
+          height: 100px;
+          border-radius: 15px;
+          overflow: hidden;
+        }
       }
     }
   }
+
+  .actList {
+    margin-top: 10px;
+  }
+  
 }
