--- a/src/app.less
+++ b/src/app.less
@@ -1,6 +1,10 @@
-@import '~@/theme/index.less';
+@import './theme/index.less';
 
 page {
   height: 100vh;
-  background-color: @theme-color-bg
+  background-color: @theme-color-bg;
+}
+
+#app {
+  background-color: @theme-color-bg;
 }
